Post meta address not using the custom field settings to hide address parts - FIXED
Post badge not replacing %%post_url%% correctly  - FIXED
Required message not editable until custom field saved - FIXED
Validation pattern extended to phone,email and url type fields - ADDED
Avada theme not using GD titles - FIXED
Recently viewed widget not checking for deleted post IDs - FIXED

v2.0.0.49
Front end author actions - After delete, page is 404 - FIXED
No map icon validation on edit cat - FIXED
Rating input not working from admin area edit comment screen - FIXED
Change for SEOPress caused Beaver builder issues on search page - FIXED
Post meta widget shows excluded fields from package - FIELD
Beaver Builder :: Added warning message to template pages to say best to use Beaver Themer - ADDED
If reviews disabled comment counts can be wrong for standard comments - FIXED
If reviews are disabled the standard comments form can sometimes show twice - FIXED
Themify ultra theme has JS conflict on admin add listing page - FIXED
Details page now adds the default id as a body class - ADDED
Pending posts count numbers will now show next to the CPT admin menu item - ADDED
Email settings subject and body placeholder text - ADDED
No listings found message should contain add listing link - ADDED
Email settings subject and body placeholder text now editable - ADDED
Post Badge widget can now use %%post_url%% replacement param - ADDED
Map widget will now hide CPT if it has no published posts - CHANGED
Light-box gallery now supports keyboard arrow navigation - ADDED
Post Badge block not showing color selected in some browsers - FIXED
New Widget added `gd_post_content` that allows to show text from textareas - ADDED
GD Archive Item default content changed to use new gd_post_content widget - CHANGED
GD custom permalinks without trailing slash will not save - FIXED
File custom fields data not converted properly during v1 to v2 conversion - FIXED
Genesis theme GD search page is broken - FIXED